--- a/instagram/app/views/posts/index.html.erb
+++ b/instagram/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
 <%= @posts.each do |x| %>
-    <%= image_tag x.image.url(:medium) &>
+    <%= image_tag x.image.url(:medium) %>
     <%= x.description %>
 <% end %>
